--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando ambiente de desarrollo
-configuracion.autor.name=ivan
-configuracion.autor.email=ivan@correo.com
+configuracion.texto=Configurando entorno de desarrollo...
+configuracion.autor.name=andres
+configuracion.autor.email=andres@correo.com
